  turned on if the destination name is the currently ACTIVE user name, which
  can be selected by pressing Ctrl+U AND the Rvd flag is only turned
  on if the destination address is the default address of the current
  mail area, you must add "Switch ReceiveAllNames Off" and
  "Switch ReceiveAllAddresses Off" to the configuration file.

Fixes:

- If you used "scan" to do an area scan on startup, the scan could
  not be interrupted if you also used the autostart macro.

- The autostart macro (and probably also other macro functions) did not 
  work properly.

- If you quote a mail from a person like Bill 'billy' Gates, the quote initals
  will be BbG now (instead of B'G). mtt

- Fixed bugs in the routine that allowed for redefinition of areas
  (i.E. manual redefition of files that previously have been imported
  from an areafile - sometimes it simply would not work).

- Backslashes could not be used in the template files. Fixed. (You only
  need to enter a SINGLE backslash to produce one!).

- Segmenatation faults and even worse errors fixed when Msged was started in
  a very small terminal (e.g. 8x8).

- Typing umlauts did not work any more  after an OS shell (Alt+J) has been
  performed. 

- If a mail in an area with the "u" flag contained multiple "from:"-lines
  (which happens if an internet user forwards mail from another internet
  user), the from sender address (i.E. the address from the last from:
  line instead of the address from the first from: line) was displayed.

- MsgEd could not read AREAS.BBS files that contained references to
  Hudson / QuickBBS style message areas. (Core dump on OS/2 and Linux).

- Fixed a cosmetical bug in conjunction with the "CC:" feature (there
  was no line break inserted between the "crossposted to ..." text
  and the message text).

- Fixed a serious bug in the zone gating code, which caused totally
  misadressed netmail if you had switched zonegating on and wrote netmail